Bug 1426827 - Treat Fitzpatrick skin-tone modifiers as cluster extenders when building textruns. r=m_kato