intl/unicharutil/util/nsUnicodeProperties.cpp
@@ -157,6 +157,7 @@ IsClusterExtender(uint32_t aCh, uint8_t aCategory)
              aCategory <= HB_UNICODE_GENERAL_CATEGORY_NON_SPACING_MARK) ||
             (aCh >= 0x200c && aCh <= 0x200d) || // ZWJ, ZWNJ
             (aCh >= 0xff9e && aCh <= 0xff9f) || // katakana sound marks
+            (aCh >= 0x1F3FB && aCh <= 0x1F3FF) || // fitzpatrick skin tone modifiers
             (aCh >= 0xe0020 && aCh <= 0xe007f)); // emoji (flag) tag characters
 }
 
